logs/linotpadminclientcli.log
Listing '.'...
Listing './bin'...
Compiling './bin/linotpadm.py'...
***   File "./bin/linotpadm.py", line 59
    print "Thank you for running the LinOTP2 linotpadmin client"
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/LinOTPAdminClientCLI-2.9.3.egg-info'...
Listing './lib/python3.5/site-packages/linotpadminclientcli'...
Compiling './lib/python3.5/site-packages/linotpadminclientcli/clientutils.py'...
***   File "./lib/python3.5/site-packages/linotpadminclientcli/clientutils.py", line 515
    print "TODO: Doing the Voodoo to set all these config keys"
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/linotpadminclientcli/pytoken-totp.py'...
***   File "./lib/python3.5/site-packages/linotpadminclientcli/pytoken-totp.py", line 74
    print "o, offset=      tokenoffset in seconds"
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/linotpadminclientcli/pytoken.template.py'...
***   File "./lib/python3.5/site-packages/linotpadminclientcli/pytoken.template.py", line 74
    print "I do not know your operating system"
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/linotpadminclientcli/yubikey.py'...
***   File "./lib/python3.5/site-packages/linotpadminclientcli/yubikey.py", line 37
    print "python yubikey module not available."
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
